Genres section added, scrollbar behavior bug when changing themes fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scrollbar-gutter: stable;
+}
 body {
   font-family: "Manrope", sans-serif;
   /* color: #ababab; */
